fix homepage url

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://dizefurkanfrontend.github.io/example4",
+  "homepage": "https://dizefurkanfrontend.github.io/example4/",
   "name": "example4",
   "version": "0.1.0",
   "private": true,
